[package]
name = "rareships"
version = "0.1.0"
authors = ["Tino Rusch"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }
ink_prelude = { version = "4.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "rareships"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
